--- a/src/components/Listings/listings.css
+++ b/src/components/Listings/listings.css
@@ -8,13 +8,13 @@
 }
 
 .listing-container{
-    width: 100%;
+    width: 30%;
     margin: 20px 0;
     padding: 0;
 }
 
 .listing-container a{
-    width: 100%;
+    width: 50%;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -22,9 +22,9 @@
 }
 
 .image-container{
-    width: 150px;
-    height: 150px;
-    margin-right: 20px;
+    width: 200px;
+    height: 100px;
+    margin: auto;
 }
 
 .image-container img{
@@ -34,8 +34,24 @@
 }
 
 .listing-content{
-    width: 60%;
-    padding: 0;
+    width: 100%;
+    height: 100px;
+    margin: 10px 0;
+    padding: 20px;
     border: 1px solid red;
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.listing-content-h2{
+    width:100%;
+    font-size: .9rem;
+}
+
+
+.listing-content-h3{
+    width: 100%;
+    font-size: 1rem;
+    border: 1px solid green;
 }
