--- a/src/components/Listings/listings.css
+++ b/src/components/Listings/listings.css
@@ -9,7 +9,7 @@
 
 .listing-container{
     width: 30%;
-    margin: 20px 0;
+    margin: 20px auto;
     padding: 0;
 }
 
@@ -35,9 +35,8 @@
 
 .listing-content{
     width: 100%;
-    height: 100px;
     margin: 10px 0;
-    padding: 20px;
+    padding: 0px;
     border: 1px solid red;
     display: flex;
     justify-content: center;
@@ -46,12 +45,14 @@
 
 .listing-content-h2{
     width:100%;
+    padding: 0;
     font-size: .9rem;
 }
 
 
 .listing-content-h3{
     width: 100%;
+    padding: 0;
     font-size: 1rem;
     border: 1px solid green;
 }
