--- a/src/components/Listings/listings.css
+++ b/src/components/Listings/listings.css
@@ -20,15 +20,6 @@
     box-shadow: 0px 1px 10px #bbb;
 }
 
-.listing-container a{
-    width: 100%;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid blue;
-}
-
 .image-container{
     width: 100%;
     height: 178px;
@@ -64,3 +55,48 @@
     padding: 0;
     font-size: 1.4rem;
 }
+
+.listing-btn{
+    width: 100%;
+    margin: 10px 0;
+    padding:0;
+    display: flex;
+    justify-content: center;
+}
+
+.listing-view-btn{
+    width: 100%;
+    text-decoration: none;
+    margin:0;
+    padding: 10px 50px;
+    background-color: rgba(4, 147, 114, 1) ;
+    border-radius: 5px;
+    color: white;
+}
+
+.listing-edit-btn{
+    width: 100%;
+    text-decoration: none;
+    margin: 0;
+    padding: 10px 80px;
+    background-color: #067BFD ;
+    border-radius: 5px;
+    color: white;
+}
+
+.listing-delete-btn p{
+    width: 100%;
+    text-decoration: none;
+    margin: 0;
+    padding: 10px 80px;
+    background-color: rgba(214, 69, 65, 1) ;
+    border-radius: 5px;
+    color: white;
+}
+
+.listing-view-btn:hover, .listing-edit-btn:hover, .listing-delete-btn p:hover{
+    text-decoration: none;
+    color: white;
+    background-color: #333;
+}
+
