--- a/src/components/Listings/profile-listing.css
+++ b/src/components/Listings/profile-listing.css
@@ -1,28 +1,53 @@
-.profile-bio{
-    width: 80%;
-    margin: 30px auto;
-    padding: 0;
+.profile-container{
+    width: 60%;
+    margin: 50px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
+    box-shadow: 0px 5px 10px #bbb;
 }
 
 .profile-img-container{
-    width: 50%;
-    margin-bottom: 20px;
+    width: 100%;
     padding: 0;
-    border: 1px solid black;
 }
 
-.profile-img-container img {
+.profile-img-container img{
     width: 100%;
+    border-radius: 10px;
 }
+
 .profile-content{
     width: 100%;
-    display: flex;
+    margin: 10px auto;
+    padding: 0;
 }
 
-.listing-content-h3{
+.profile-location{
     width: 100%;
+    margin: 20px 0;
+    padding: 10px 0;
+    font-size: 4rem;
+    color: #067BFD;
+}
+
+.profile-txt{
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 20px;
+    font-size: 1.5rem;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+}
+
+.profile-price{
+    width: 100%;
+    padding: 20px 0;
+    font-size: 3rem;
+    color: #333;
 }
