--- a/src/components/Listings/listings.css
+++ b/src/components/Listings/listings.css
@@ -46,7 +46,7 @@
 .listing-content-h2{
     width:100%;
     padding: 0;
-    font-size: 2rem;  
+    font-size: 1.7rem;  
 }
 
 
@@ -68,7 +68,7 @@
     width: 100%;
     text-decoration: none;
     margin:0;
-    padding: 10px 50px;
+    padding: 5px 50px;
     background-color: rgba(4, 147, 114, 1) ;
     border-radius: 5px;
     color: white;
@@ -78,7 +78,7 @@
     width: 100%;
     text-decoration: none;
     margin: 0;
-    padding: 10px 80px;
+    padding: 5px 80px;
     background-color: #067BFD ;
     border-radius: 5px;
     color: white;
@@ -88,15 +88,21 @@
     width: 100%;
     text-decoration: none;
     margin: 0;
-    padding: 10px 80px;
-    background-color: rgba(214, 69, 65, 1) ;
+    padding: 5px 80px;
+    background-color: #aaa;
     border-radius: 5px;
     color: white;
 }
 
-.listing-view-btn:hover, .listing-edit-btn:hover, .listing-delete-btn p:hover{
+.listing-view-btn:hover, .listing-edit-btn:hover{
     text-decoration: none;
     color: white;
     background-color: #333;
+}
+
+.listing-delete-btn p:hover{
+    background-color: rgba(214, 69, 65, 1);
+    color: white;
+    text-decoration: none;
 }
 
